# cpp-typecheck

./: CHANGELOG  Cargo.toml  README.md
src/: cache.rs  cmd.rs  config.rs  ct_result.rs  dirs.rs  main.rs
vim/plugin/: clang-typecheck.vim
