[package]
name = "cpp-typecheck"
version = "0.3.8"
authors = ["Daniel Trstenjak <daniel.trstenjak@gmail.com>"]
license = "BSD-3-Clause"
description = "Type check a C++ source file with a clang compilation database"
repository = "https://github.com/dan-t/cpp-typecheck"
readme = "README.md"

[dependencies]
serde_json = "1.0.9"
error-type = "0.1.2"
lazy_static = "1.0.0"
clap = "~2.2.6"
tempfile = "~2.1.4"
atomicwrites = "~0.0.14"
