[package]
name = "cpp-typecheck"
version = "0.6.0"
authors = ["Daniel Trstenjak <daniel.trstenjak@gmail.com>"]
license = "BSD-3-Clause"
description = "Type check a C++ source file with a clang compilation database"
repository = "https://github.com/dan-t/cpp-typecheck"
readme = "README.md"

[dependencies]
serde_json = "1.0.55"
error-type = "0.1.2"
lazy_static = "1.4.0"
clap = "2.33.1"
tempfile = "3.1.0"
atomicwrites = "0.2.5"
dirs = "3.0.0"
